--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="y_conversation1">您好！很高兴为你服务!</string>
     <string name="y_conversation2">您好！我想咨询下baby的营养搭配方案！</string>
     <string name="y_conversation3">没问题！请提供下宝宝的基本情况！</string>
-
+    <string name="y_bespoke_demo">定制</string>
     <!--咨询模块******************************************End-->
     <!--登录界面S-->
     <string name="s_login">登录</string>
