--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,42 @@
     <string name="s_personal_button">保存设置</string>
     <string name="s_personal_showButton">显示</string>
     <!--END-->
+    <!--s_healthy-->
+    <string name="s_healthyOne">“美国油桃”：产地是南美，并不比国产的好吃
+
+　　许多人印象中，似乎进口水果就是贵的代名词，但事实上，如今的水果市场上，很多国产水果价格比进口的更高，最近市场上出售的“美国油桃”，其实产地是在南美，并且品质并不比国产的好。
+
+　　“其实所谓的美国油桃主要是产自南美，国产的主要来自东北产的，东北产的现在是十五六块一斤，南美产的大概十二三块。”众彩市场的吴总介绍，后者在春节之前极其热销，但目前已经接近下市期，由于储存时间比较长了，常常出现里面发黑的情况。而东北产的油桃由于新上市，口感丝毫不输进口的，尤其是那种头部扁平顶部圆圆的，口感非常甜蜜清爽，因此价格也比较贵。
+
+　　记者了解到，一些经销商把产地“南美”的水果说成是产自“美国”主要是想突出其“高端产地”，事实上，许多车厘子、牛油果等也是产自南美国家，诸如智利。
+
+　　“一般手感太软的都不好，说明放的时间比较长了，果实里面容易发黑。”吴总介绍说，无论哪个产地的油桃，购买的时候要注意，越新鲜越好吃。
+
+　　“奶油草莓、牛奶草莓、巧克力草莓：怎么没吃出奶油巧克力味呢？
+
+　　现在在南京，几乎凡是卖草莓的都宣称自己卖的是“奶油草莓”。那么，这种草莓真像奶油一样香甜吗？“好吃是好吃，但真没吃出一点奶油味”，这是不少消费者对所谓“奶油草莓”的感觉。至于“巧克力草莓”，也没人能吃出有巧克力味。那么，这些草莓的实质到底是什么呢？"</string>
+    <string name="s_healthyTwo">      　一：香芹菜
+
+　　这种草本植物最有助于消除口中的异味，尤其是烟味。如果手边一时找不到香芹菜，香菜、薄荷也能起到去除口腔异味的作用。为了达到更好的效果，这些东西嚼的时间越长越好。
+
+　　二：酸奶
+
+　　每天坚持喝酸奶可降低口腔异味，喝酸奶还可以阻止口腔中有害细菌的产生，清洁口腔，但含糖的酸奶起不到这种效果。
+
+　　三：富含纤维素的蔬菜
+
+　　包括苹果、胡萝卜等。这些蔬菜和水果有助于分泌大量唾液。唾液不仅能湿润口腔，还能清除附着在牙齿上面或塞在牙缝中的食物残渣。这些食物残渣也是导致口腔异味的原因之一。
+
+　　四：含大量维生素c的水果
+
+　　浆果、柑橘、西瓜和其他含有大量维生素c的食物能使口腔形成一个不利于细菌生长的环境。经常摄入维生素c对牙床的健康也非常有用。但要注意，维生素c应该从天然食品，而非从食品添加剂中摄入，因为添加剂可能会使消化功能紊乱。
+
+　　四大食物可使口气清新，专家表示说另外，易引起口臭的许多感染性疾病(如齿槽溢脓、龋齿、上颌窦炎、肺脓肿等)都与厌氧菌及化脓菌的联合感染有关，同时幽门螺杆菌感染也与多种易引起口臭的消化系统疾病(如慢性胃炎、十二指肠溃疡、消化不良、胃癌等)密切相关，所以及时治疗这几种细菌的感染，对消除原发病及口臭均有重要意义。</string>
+    <string name="s_healthyThree">许多家庭里水果、糖果、饮料等甜品都摆得满满的。有人在吃了太多的零食后，由于摄取了较多的糖分和香料，出现了莫名其妙的恼怒、情绪激动、嘴干舌苦等症状。此时，可以适当吃一些山楂片，多饮茶水，停吃零食。
+
+　　山楂片中含山楂酸等多种有机酸，味酸甘，并含解脂酶。入胃后，能增强酶的作用，促进肉食消化，有助于胆固醇转化。对于吃肉或油腻物后感到饱胀的人，吃些山楂、山楂片、山楂水或山楂丸等，均可消食。山楂还可利胆汁，促进胃液分泌。山楂开胃消食、化滞消积，但山楂只消不补，脾胃虚弱者不宜多食。健康的人食用山楂也应有所节制。
+
+　　此外，还要多饮茶水，因为茶叶中的咖啡碱能增加胃腺体分泌，促进食欲，帮助消化；其次，茶叶中含有的多酚类化合物以薄膜状态附着在胃的伤口处，可抑制因胃溃疡引起的出血；还可吸收对人体有害的物质，起到“净化”作用。因此，在饭后尤其是摄入较多量的含脂肪食品后，饮茶是有益的。</string>
+   <!---->
+
 </resources>
