--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_nameOne">倾心营养师</string>
+    <string name="h_network_check">网络无连接</string>
     <!--咨询模块*********************************by Yu-->
     <string name="y_levelOne">一级营养师</string>
     <string name="y_levelTwo">二级营养师</string>
